[gd_scene load_steps=2 format=3 uid="uid://bvgh060edrp7j"]

[ext_resource type="Script" uid="uid://btvd0b0skhsfa" path="res://src/MainMenu/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LD-Base"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SelectLevel" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Select level"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
